--- a/english.html
+++ b/english.html
@@ -321,6 +321,8 @@ Error message and password prompt
 
 <li>Ayala Malach Pines</li>
 
+<li>Baked Cheesecake</li>
+
 <li>Baked potatoes and yams</li>
 
 <li>Baked turkey</li>
@@ -9923,6 +9925,15 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[איילה מלאך פיינס]]&gt;&gt;</pre>
 </div>
+<div created="20220413200337037" modified="20220413200817773" tags="Recipes Kitchens Baking [[Food addicts]]" title="Baked Cheesecake">
+<pre>
+[img[pictures/bakedcheesecake.jpg]]
+
+
+
+ &lt;&lt;heblink [[עוגת גבינה אפויה]]&gt;&gt;
+</pre>
+</div>
 <div created="20200307175504541" modified="20200307175626733" tags="Recipes [[Christmas dinner Recipes]]" title="Baked potatoes and yams">
 <pre>[img[pictures/batatot-batanoor.jpg]]
 
@@ -11613,7 +11624,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20220411121857534" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20220413200500482" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -13635,8 +13646,7 @@ This generation is carrying on his back generations and generations of unconscio
  &lt;&lt;heblink [[דור הנפש]]&gt;&gt;</pre>
 </div>
 <div created="20220411121317730" modified="20220411121928567" tags="[[Here in the Ghetto]] [[On the road to somewhere]]" title="Merkaz Ba'alei Melaha 6">
-<pre>
-[img[pictures/MerkazBa'aleiMelaha.jpg]]
+<pre>[img[pictures/MerkazBa'aleiMelaha.jpg]]
 
 
  &lt;&lt;heblink [[מרכז בעלי מלאכה 6]]&gt;&gt;
