--- a/index.html
+++ b/index.html
@@ -1251,6 +1251,8 @@ Error message and password prompt
 
 <li>עוגיות שוקולד צ'יפס</li>
 
+<li>עוגת גבינה אפויה</li>
+
 <li>עוגת יום הולדת</li>
 
 <li>עוגת מוקה</li>
@@ -9350,7 +9352,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מרכז בעלי מלאכה 6]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[עוגת גבינה אפויה]] [[מרכז בעלי מלאכה 6]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10849,7 +10851,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20220411122011212" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20220413200722701" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -18320,6 +18322,91 @@ We rise to play a greater part.
 
 
 &lt;&lt;englink [[Chocolate chip cookies]]&gt;&gt;</pre>
+</div>
+<div created="20220413200514918" modified="20220413204758945" tags="מתכונים אפייה מטבחים [[חיות אוכל]]" title="עוגת גבינה אפויה">
+<pre>
+
+[img[pictures/bakedcheesecake.jpg]]
+
+
+!!![[אימא של ג'אז]]:
+
+מאחר שאני מעלה את המתכון הזה כאן יומיים לפני ליל הסדר התשפ&quot;ב, אני מציינת כי עוגה זו, באם הבסיס כשל&quot;פ אזי העוגה כולה  כולל הקרם, אינם כוללים חמץ. 
+
+כמו כן, העוגה כוללת פודינג אינסטנט וניל, מוצר שהוא לא-לא גדול אולי ברמה של אבקת מרק, ועדיין היא עוגה אהובה ביותר.
+
+בהצלחה
+
+
+1. בסיס:
+
+החומרים:
+
+100 גרם ביסקוויטים מפוררים (פטי בר,אבל אפשר גם אחרים כולל כשרים לפסח)
+
+100 גרם חמאה מומסת
+
+אופן ההכנה:
+
+מערבבים את השניים ומשטחים לתוך תבנית בקוטר 26 או 28 (אפשר גם לתבנית מלבנית), ומניחים במקפיא עד שהתערובת לאפייה מוכנה
+
+2.העוגה:
+
+מחממים תנור ל150 מעלות צלזיוס
+
+6 ביצים 
+
+כוס סוכר
+
+750 גרם גבינה תשעה אחוזים
+(אבל אפשר גם גבינות רכות חלקות אחרות גם אם הן שמנות יותר, כמו מסקרפונה, ריקוטה או גבינת שמנת)
+
+מיכל שמנת חמוצה
+
+רבע כוס מיץ לימון
+
+4 כפות פודינג אינסטנט וניל (שטוחות עד מעט מלאות יותר)
+
+4 כפות קורנפלור  (שטוחות)
+
+אופן ההכנה:
+
+מחממים את התנור ל170 מעלות
+
+בקערת המערבל החשמלי מקציפים את הביצים עם כוס הסוכר במהירות גבוהה עד לתערובת בהירה תפוחה וחזקה.
+
+בקערה גדולה טורפים במטרפה ידנית את הגבינות והשמנת, מוסיפים קורנפלור ופודינג, טורפים אותם פנימה עד שהתערובת חלקה, מוסיפים את הלימון וטורפים פנימה.
+
+אל תערובת הגבינות מוסיפים את הביצים המוקצפות וטורפים בעדינות עד שהתרובת אחידה.
+
+מוציאים את התבנית עם הביסקוויטים מהפריזר, ומוזגים את תערובת הגבינה בעדינות מעל.
+
+מכניסים לתנור לשעה בערך.
+
+עד שהעוגה זהובה ועדיין מעט רכה.
+
+מצננים לטמפרטורת חדר.
+
+3.קרם:
+
+כוס שמנת מתוקה
+
+כוס חלב
+
+4 כפות שטוחות של פודינג אינסטנט וניל(באריזות תוצרת הארץ בחבילה פודינג כזו יש שמונה כפות)
+
+מערבלים את שלושת המרכיבים בקערת המערבל החשמלי במהירות הנמוכה ביותר, עד שנוצר קרם חלק ללא בועות ונוזלי למדי אותו מוזגים בעדינות על העוגה האפויה ובטמפרטורת החדר (הקרם יתקשה במקרר, ויהפוך לשכבה חלקה ויפה), מכסים ומכניסים בעדינות למקרר לשש שעות לפחות לפני ההגשה
+
+
+(העוגה טובה ארבעה חמישה ימים במקרר ולא מומלץ להקפיאה)
+
+
+
+
+
+&lt;&lt;englink [[Baked Cheesecake]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20180516163354756" modified="20200813153926313" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים ילדים אפייה" title="עוגת יום הולדת">
 <pre>[img[pictures/birthday-cake.jpg]]
