--- a/index.html
+++ b/index.html
@@ -1145,6 +1145,8 @@ Error message and password prompt
 
 <li>משנים</li>
 
+<li>משפחה מהסדרות</li>
+
 <li>משפחות</li>
 
 <li>משפחת באומן</li>
@@ -9352,7 +9354,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[עוגת גבינה אפויה]] [[מרכז בעלי מלאכה 6]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[משפחה מהסדרות]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10851,7 +10853,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20220413200722701" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20220428150037922" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -17202,9 +17204,7 @@ We rise to play a greater part.
 &lt;&lt;englink [[Marina Zoto]]&gt;&gt;</pre>
 </div>
 <div created="20220411121335326" modified="20220411123607637" tags="[[כאן בגטו]] [[בדרך לאן שהוא]]" title="מרכז בעלי מלאכה 6">
-<pre>
-
-[img[pictures/MerkazBa'aleiMelaha.jpg]]
+<pre>[img[pictures/MerkazBa'aleiMelaha.jpg]]
 
 !!![[אימא של ג'אז]]:
 
@@ -17373,6 +17373,17 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Changing]]&gt;&gt;
 
+</pre>
+</div>
+<div created="20220428145657396" modified="20220428165354066" tags="משפחות סדרות ארוחות [[חיות אוכל]]" title="משפחה מהסדרות">
+<pre>[img[pictures/afamilyoutta.jpg]]
+
+!!![[גורה]]:
+
+זה מה שאנחנו, וזה אולי מה שכולם, למעט הבדלי סוגא ותוכן.
+
+
+&lt;&lt;englink [[A family outta aseries]]&gt;&gt;
 </pre>
 </div>
 <div created="20200426132241186" modified="20200505100257814" tags="אימהות ארוחות בתים ילדים הצוות" title="משפחות">
@@ -18324,9 +18335,7 @@ We rise to play a greater part.
 &lt;&lt;englink [[Chocolate chip cookies]]&gt;&gt;</pre>
 </div>
 <div created="20220413200514918" modified="20220413204758945" tags="מתכונים אפייה מטבחים [[חיות אוכל]]" title="עוגת גבינה אפויה">
-<pre>
-
-[img[pictures/bakedcheesecake.jpg]]
+<pre>[img[pictures/bakedcheesecake.jpg]]
 
 
 !!![[אימא של ג'אז]]:
