--- a/english.html
+++ b/english.html
@@ -263,6 +263,8 @@ Error message and password prompt
 
 <li>A Fairy Tale's Mother</li>
 
+<li>A family outta aseries</li>
+
 <li>A friend</li>
 
 <li>A politician</li>
@@ -9264,7 +9266,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[A family outta aseries]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9528,6 +9530,15 @@ With the assistance of the code she has transplanted in my father, in me and in 
 
 
  &lt;&lt;heblink [[אימא מהאגדות]]&gt;&gt;</pre>
+</div>
+<div created="20220428145831207" modified="20220428152438910" tags="Families [[TV Series]] Meals [[Food addicts]]" title="A family outta aseries">
+<pre>[img[pictures/afamilyoutta.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[משפחה מהסדרות]]&gt;&gt;
+</pre>
 </div>
 <div created="20200212200933944" modified="20200501131544944" tags="Films [[Life is for those who can't deal with drugs]]" title="A friend">
 <pre>[img[pictures/friend.jpg]]
@@ -9926,8 +9937,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
  &lt;&lt;heblink [[איילה מלאך פיינס]]&gt;&gt;</pre>
 </div>
 <div created="20220413200337037" modified="20220413200817773" tags="Recipes Kitchens Baking [[Food addicts]]" title="Baked Cheesecake">
-<pre>
-[img[pictures/bakedcheesecake.jpg]]
+<pre>[img[pictures/bakedcheesecake.jpg]]
 
 
 
@@ -11624,7 +11634,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20220413200500482" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20220428145942768" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
