--- a/index.html
+++ b/index.html
@@ -1235,6 +1235,8 @@ Error message and password prompt
 
 <li>ספייק לי</li>
 
+<li>ספינה באינסוף</li>
+
 <li>ספירל</li>
 
 <li>סרטים</li>
@@ -9345,7 +9347,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20210430202203122" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20220411123545250" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20220517133800102" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9354,7 +9356,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[משפחה מהסדרות]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[ספינה באינסוף]] חלונות [[מערכת תל אביב]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9374,7 +9376,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20220216141734735" title="$:/temp/search">
+<div created="20161023184814872" modified="20220515191727799" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10853,7 +10855,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20220428150037922" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20220517133334643" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -18087,6 +18089,21 @@ We rise to play a greater part.
 5. [[שחור על לבן|סרטים]]
 
 &lt;&lt;englink [[Spike Lee]]&gt;&gt;</pre>
+</div>
+<div created="20220517133029116" modified="20220517134330551" tags="[[כאן בגטו]] חלונות בתים [[הכפר הגלובלי]] סגירים" title="ספינה באינסוף">
+<pre>
+[img[pictures/ashipineternity.jpg]]
+
+
+!!![[תומר]]:
+
+לפני יומיים מלאו חמש שנים לסגירת [[רשות השידור|מערכת תל אביב]], ולזכרה צילמתי את המנופים שבונים את השכונה שתיכף תהיה שם כפי שנראים [[מחלון הכביסה|חלונות]].
+
+
+
+
+&lt;&lt;englink [[A ship in eternity]]&gt;&gt;
+</pre>
 </div>
 <div created="20170606204237997" modified="20200308094849577" tags="[[אירי טוענת]] [[אחיות חוץ]]" title="ספירל">
 <pre>[img[pictures/spiral.jpg]]
