--- a/index.html
+++ b/index.html
@@ -9356,7 +9356,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ספינה באינסוף]] חלונות [[מערכת תל אביב]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[קובה טבעוני]] [[ספינה באינסוף]] חלונות [[מערכת תל אביב]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9376,7 +9376,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20220515191727799" title="$:/temp/search">
+<div created="20161023184814872" modified="20220517134704297" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -18090,14 +18090,14 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Spike Lee]]&gt;&gt;</pre>
 </div>
-<div created="20220517133029116" modified="20220517134330551" tags="[[כאן בגטו]] חלונות בתים [[הכפר הגלובלי]] סגירים" title="ספינה באינסוף">
+<div created="20220517133029116" modified="20220517134632070" tags="[[כאן בגטו]] חלונות בתים [[הכפר הגלובלי]] סגירים" title="ספינה באינסוף">
 <pre>
 [img[pictures/ashipineternity.jpg]]
 
 
 !!![[תומר]]:
 
-לפני יומיים מלאו חמש שנים לסגירת [[רשות השידור|מערכת תל אביב]], ולזכרה צילמתי את המנופים שבונים את השכונה שתיכף תהיה שם כפי שנראים [[מחלון הכביסה|חלונות]].
+לפני יומיים מלאו חמש שנים לסגירת [[רשות השידור|מערכת תל אביב]], ולזכרה צילמתי את המנופים שבונים את השכונה שתיכף תהיה שם כפי שנראים [[ממרפסת הכביסה|חלונות]].
 
 
 
@@ -20013,7 +20013,7 @@ Fapina''
 &lt;&lt;englink [[Queng]]&gt;&gt;
 </pre>
 </div>
-<div created="20190422120310153" modified="20220219163531087" tags="[[מתכונים טבעוניים]] [[חיות אוכל]] מתכונים" title="קובה טבעוני">
+<div created="20190422120310153" modified="20220517140713359" tags="[[מתכונים טבעוניים]] [[חיות אוכל]] מתכונים" title="קובה טבעוני">
 <pre>[img[pictures/veg-cube.jpg]]
 
 !!![[הצוות]]:
@@ -20027,6 +20027,7 @@ Fapina''
 
 למלית:
 
+*שמן זית
 *בצל קצוץ
 *גזר מגורר
 *2-3 סלסלות של פטריות מכל סוג שתרצו ורצוי מכמה סוגים, חתוכות לקוביות קטנות
@@ -20034,16 +20035,17 @@ Fapina''
 
 לרוטב:
 
-*שתי שיני שום פרוסות
+*שמן זית
+*ג'ינגר 
+*שתי שיני שום כתושות או גרורות במגררת דקה
 *שלושה מקלות סלרי פרוסים
 *שתי בטטות בינוניות חתוכות לקוביות
 *חמש עגבניות קטנות חתוכות לקוביות
 *קופסת עגבניות קלופות 
-*כוס גרגירי חומוס מבושלים במים או מהסוגים הקפואים
 *כפית תבלין קארי אדום
 *רבע כפית קינמון
 *רבע כפית חוואייג' לקפה או בהרט
-*מלח ים גס
+*מלח ים גס לפחות 2 כפיות, ובהמשך לטעום ולהוסיף באם צריך
 *פלפל שחור
 *קורט סוכר
 *ג'ינג'ר מגורר
@@ -20053,29 +20055,27 @@ Fapina''
 
 1. מערבבים את חומרי הבצק עד לכדור חלק ואחיד ומניחים בקערה עטופה במקרר - לגבי המים - בהתחלה מוסיפים לקמח הסולת והשמן חצי כוס מים ולשים עד לבצק חלק. אם הוא יבש מידי מוסיפים עוד כף או שתיים ובודקים.
 
-2. למלית - במחבת גדולה מחממים 3-4 כפות שמן זית וצולים בהם לפי הסדר את הבצל, הגזר, הפטריות והצנוברים- בכל שלב לתת לפריט להזהיב יפה, וכשמוכן מניחים בצד.
+2. למלית - במחבת גדולה מחממים 3-4 כפות שמן זית וצולים  על להבה בינונית בהתחלה, ולאחר צריבה ראשונית  על להבה נמוכה לפי הסדר את הבצל, הגזר, הפטריות והצנוברים- בכל שלב לתת לפריט להזהיב יפה. מניחים למלית להתקרר. 
 
-3. לרוטב - בסיר בינוני-גדול מחממים 3--4 כפות שמן זית ומתחילים להזהיב לפי הסדר את השום, הסלרי, והבטטות
+3. לרוטב - בסיר בינוני-גדול מחממים 3--4 כפות שמן זית ומתחילים להזהיב לפי הסדר את השום, הסלרי, הבטטות והג'ינג'ר מגורר על פומפיה דקה.
 
-4. כשהבטטות זהובות מוסיפים אליהן את התבלינים ומטגנים אותן דקה-שתיים נוספות.
+4. כשהבטטות זהובות מוסיפים אליהן את התבלינים  ומטגנים אותן דקה-שתיים נוספות תוך ערבוב עדין כך שהכל ייעטף בתבלינים.
 
-5. מוסיפים את העגבניות וצולים אותן עוד 15 דקות בערך
+5. מוסיפים את העגבניות וצולים אותן עוד 15 דקות בערך (הלהבה עדיין נמוכה)
 
-6.מוסיפים את גרגירי החומוס והמים
+6.מוסיפים את המים ועל להבה בינונית שוב, נותנים לרוטב לרתוח. לאחר שרתח  מנמיכים את הלהבה ומבשלים כ-30-40 דקות (טועמים ואם צריך מתקנים תיבול)
 
-7. נותנים לרוטב לרתוח, מנמיכים את הלהבה ומבשלים 20-30 דקות (טועמים ואם צריך מתקנים)
-
-8. בזמן שהרוטב מתבשל מוציאים את בצק הסולת מהמקרר ויוצרים עם ידיים רטובות כ-12 כדורי בצק. מחזירים למקרר ל-10-15 דקות נוספות
+8. בזמן שהרוטב מתבשל מוציאים את בצק הסולת מהמקרר ויוצרים כשכפות הידיים מעט רטובות כ-12 כדורי בצק. מחזירים למקרר ל-10-15 דקות נוספות
 
 9. לאחר שהבצק התקרר, ממלאים אותו במלית הפטריות: 
 
-*משטחים את הבצק לעיגול בקוטר של 8 סנטימטרים בערך
+*משטחים את הבצק למעגל בקוטר של 8 סנטימטרים בערך
 
 * קורצים מהמילוי כמות של בערך כפית וחצי ומאחדים אותה לכדור, אותו מניחים במרכז עיגול הבצק, סוגרים את קצוותיו ומאחדים אותם לסגירה אחת, מגלגלים מעט ובודקים שהכדור סגור כמו שצריך
 
 *מקררים את הקובות הלא מבושלות עד שהרוטב מוכן
 
-10. כשהרוטב מוכן, מניחים בעדינות את כדורי הקובה בתוכו, ומבשלים על להבה נמוכה כשעה.
+10. כשהרוטב מוכן, מכניסים בעדינות את כדורי הקובה לתוכו (אנחנו מניחים כדור על כף ובעזרתה מחדירים אותו בעדינות לתוך הרוטב בינות לירקות), ומבשלים על להבה נמוכה כשעה.
 
 * טעים מאד על [[קוסקוס]] או [[אורז|אורז לבן עם צנוברים]]
 
