--- a/index.html
+++ b/index.html
@@ -691,6 +691,8 @@ Error message and password prompt
 
 <li>הסיפור על גורה</li>
 
+<li>הסלון של שרה</li>
+
 <li>הסמויה</li>
 
 <li>הספלים מהם אנו שותים</li>
@@ -9347,7 +9349,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20210430202203122" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20220517133800102" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20220619172547159" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9356,7 +9358,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[קובה טבעוני]] [[ספינה באינסוף]] חלונות [[מערכת תל אביב]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[הסלון של שרה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9376,7 +9378,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20220517134704297" title="$:/temp/search">
+<div created="20161023184814872" modified="20220530113508114" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10855,7 +10857,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20220517133334643" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20220619172142288" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -13453,6 +13455,18 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;englink [[Gura`s tale]]&gt;&gt;
 
+</pre>
+</div>
+<div created="20220619171649885" modified="20220619173044696" tags="בתים [[כאן בגטו]] אימהות [[מטא בדיון]]" title="הסלון של שרה">
+<pre>
+[img[pictures/sarah'slivingroom.jpg]]
+
+!!![[תומר]]:
+
+לפעמים עולים ריחות באפי, שמרימים אותי מהכסא לבדוק אם אין, למשל, איזו דליפת גז, כמו שקרה לי השבוע, רחרחתי את הבית כולו והכל הרריח כשורה, לרוב אני לא ושה את זה, אבל הפעם ירדתי לבדוק אם הכל בסדר אצל שרה הישישה שגרה קומה אחת למטה. היא הובילה אותי מיד לספה בסלון, שסגור רוב הזמן, והושיבה אותי על הספה שממול למזנון שמיגנט אותי. צילמתי ושלחתי [[לגורה|גורה]] שתצייר.
+
+
+&lt;&lt;englink [[Sarah's living room]]&gt;&gt;
 </pre>
 </div>
 <div created="20180619140440878" modified="20200501140702293" tags="סדרות טלוויזיה [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="הסמויה">
@@ -16969,14 +16983,14 @@ We rise to play a greater part.
 &lt;&lt;englink [[HaAchims grocery store]]&gt;&gt;
 </pre>
 </div>
-<div created="20200823173415382" modified="20200823175053741" tags="[[כאן בגטו]] [[סיפורים אמיתיים]]" title="מכוניות כאן">
+<div created="20200823173415382" modified="20220530113539039" tags="[[כאן בגטו]] [[סיפורים אמיתיים]]" title="מכוניות כאן">
 <pre>[img[pictures/carshere.jpg]]
 
 
 
 !!![[תומר]]:
 
-קומיאורי ואני מתקרבים למעבר החצייה המוביל לפארק והיא אומרת לי: &quot;זה מדהים אותי שאנשים קונים או מכוניות שחורות, או אפורות, או לבנות&quot;, ואז מוסיפה: &quot;אני מאד מעריכה את אלה שקונים מכונית צבעונית&quot;, ומחייכת את חיוכה הנהדר.
+קומיאורי ואני מתקרבות למעבר החצייה המוביל לפארק והיא אומרת לי: &quot;זה מדהים אותי שאנשים קונים או מכוניות שחורות, או אפורות, או לבנות&quot;, ואז מוסיפה: &quot;אני מאד מעריכה את אלה שקונים מכונית צבעונית&quot;, ומחייכת את חיוכה הנהדר.
 
 
 
@@ -18091,8 +18105,7 @@ We rise to play a greater part.
 &lt;&lt;englink [[Spike Lee]]&gt;&gt;</pre>
 </div>
 <div created="20220517133029116" modified="20220517134632070" tags="[[כאן בגטו]] חלונות בתים [[הכפר הגלובלי]] סגירים" title="ספינה באינסוף">
-<pre>
-[img[pictures/ashipineternity.jpg]]
+<pre>[img[pictures/ashipineternity.jpg]]
 
 
 !!![[תומר]]:
