--- a/english.html
+++ b/english.html
@@ -1049,6 +1049,8 @@ Error message and password prompt
 
 <li>Sabich 29</li>
 
+<li>Sarah's living room</li>
+
 <li>Saraleh would have liked it</li>
 
 <li>Scents</li>
@@ -9268,7 +9270,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[A ship in eternity]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Sarah's living room]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9595,8 +9597,7 @@ In fact, when it comes to women I kinda dig the word woman.
  &lt;&lt;heblink [[גבר פריבילגי]]&gt;&gt;</pre>
 </div>
 <div created="20220517133145386" modified="20220517134154884" tags="[[Here in the Ghetto]] Windows Closers Houses [[The global village]]" title="A ship in eternity">
-<pre>
-[img[pictures/ashipineternity.jpg]]
+<pre>[img[pictures/ashipineternity.jpg]]
 
 
 
@@ -11644,7 +11645,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20220517133239901" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20220619172038761" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -15020,6 +15021,18 @@ Rushell is the youngest daughter of [[Genevieve]], she was born in 2000, she's i
 
 
  &lt;&lt;heblink [[סביח 29]]&gt;&gt;</pre>
+</div>
+<div created="20220619171917118" modified="20220619172900688" tags="Houses [[Here in the Ghetto]] Mothers Metafiction" title="Sarah's living room">
+<pre>
+[img[pictures/sarah'slivingroom.jpg]]
+
+
+
+
+
+
+
+ &lt;&lt;heblink [[הסלון של שרה]]&gt;&gt;</pre>
 </div>
 <div created="20200202175127567" modified="20200725182148141" tags="[[Outer sisters]] Music Closers" title="Saraleh would have liked it">
 <pre>[img[pictures/sarale-hayta.jpg]]
