--- a/index.html
+++ b/index.html
@@ -13457,13 +13457,13 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20220619171649885" modified="20220619173044696" tags="בתים [[כאן בגטו]] אימהות [[מטא בדיון]]" title="הסלון של שרה">
+<div created="20220619171649885" modified="20220619173732930" tags="בתים [[כאן בגטו]] אימהות [[מטא בדיון]]" title="הסלון של שרה">
 <pre>
 [img[pictures/sarah'slivingroom.jpg]]
 
 !!![[תומר]]:
 
-לפעמים עולים ריחות באפי, שמרימים אותי מהכסא לבדוק אם אין, למשל, איזו דליפת גז, כמו שקרה לי השבוע, רחרחתי את הבית כולו והכל הרריח כשורה, לרוב אני לא ושה את זה, אבל הפעם ירדתי לבדוק אם הכל בסדר אצל שרה הישישה שגרה קומה אחת למטה. היא הובילה אותי מיד לספה בסלון, שסגור רוב הזמן, והושיבה אותי על הספה שממול למזנון שמיגנט אותי. צילמתי ושלחתי [[לגורה|גורה]] שתצייר.
+לפעמים עולים ריחות באפי, שמרימים אותי מהכסא לבדוק אם אין, למשל, איזו דליפת גז, כמו שקרה לי השבוע, רחרחתי את הבית כולו והכל הריח כשורה, לרוב אני לא עושה את זה, אבל הפעם ירדתי לבדוק אם הכל בסדר אצל שרה הישישה שגרה קומה אחת למטה. היא הובילה אותי מיד לספה בסלון, שסגור רוב הזמן, והושיבה אותי על הספה מול למזנון והטפט שמיגנטו אותי. צילמתי ושלחתי [[לגורה|גורה]] שתצייר.
 
 
 &lt;&lt;englink [[Sarah's living room]]&gt;&gt;
