--- a/index.html
+++ b/index.html
@@ -641,6 +641,8 @@ Error message and password prompt
 
 <li>החיים נועדו למי שלא יכול להתמודד עם סמים</li>
 
+<li>היא ישבה בסלון ועישנה סיגריה</li>
+
 <li>היום יום הולדת</li>
 
 <li>היועצת</li>
@@ -9349,7 +9351,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20210430202203122" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20220619172547159" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20220903103503595" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9358,7 +9360,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[הסלון של שרה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[היא ישבה בסלון ועישנה סיגריה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9378,7 +9380,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20220530113508114" title="$:/temp/search">
+<div created="20161023184814872" modified="20220829175509727" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10857,7 +10859,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20220619172142288" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20220903102944202" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -13037,6 +13039,18 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
+<div created="20220903102152357" modified="20220903103459755" tags="אימהות בתים [[האחיות בלות]] [[סיפורים אמיתיים]]" title="היא ישבה בסלון ועישנה סיגריה">
+<pre>
+[img[pictures/shesatinthelivingroom.jpg]]
+
+[[אימא של ג'אז]:
+
+בסוף התיכון הגיע מורה לדרמה, ואחותי ואני הצטרפנו לחוג שפתח. באחד התרגילים נתבקשנו ללכת בחדר, ולהגיד משפט שמזכיר לנו את אימא שלנו. אני לא זוכרת מה היה המשפט שאני אמרתי. אבל אני זוכרת את המשפט שאחותי אמרר: &quot;היא ישבה בסלון ועישנה סיגריה&quot;.
+
+
+
+&lt;&lt;englink [[She sat in the living room and smoked a cigarette]]&gt;&gt;</pre>
+</div>
 <div created="20210430201959612" modified="20210430210230635" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] מטבחים בתים אימהות [[האחיות בלות]] חלונות" title="היום יום הולדת">
 <pre>[img[pictures/birthay.jpg]]
 
@@ -13458,8 +13472,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 </pre>
 </div>
 <div created="20220619171649885" modified="20220619173732930" tags="בתים [[כאן בגטו]] אימהות [[מטא בדיון]]" title="הסלון של שרה">
-<pre>
-[img[pictures/sarah'slivingroom.jpg]]
+<pre>[img[pictures/sarah'slivingroom.jpg]]
 
 !!![[תומר]]:
 
@@ -17391,7 +17404,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20220428145657396" modified="20220428165638358" tags="משפחות סדרות ארוחות [[חיות אוכל]]" title="משפחה מהסדרות">
+<div created="20220428145657396" modified="20220829175608901" tags="משפחות סדרות ארוחות [[חיות אוכל]] [[קופים ממונעים]]" title="משפחה מהסדרות">
 <pre>[img[pictures/afamilyoutta.jpg]]
 
 !!![[גורה]]:
