--- a/english.html
+++ b/english.html
@@ -15173,7 +15173,7 @@ Shay Tra Litman is [[a fine young lad|https://www.youtube.com/watch?v=_awp-5mjew
 
  &lt;&lt;heblink [[שי טרא ליטמן]]&gt;&gt;</pre>
 </div>
-<div created="20220903102731013" modified="20220903103527808" tags="Mothers Houses [[True stories]]" title="She sat in the living room and smoked a cigarette">
+<div created="20220903102731013" modified="20220903104251789" tags="Mothers Houses [[True stories]] [[Menopause sisters]]" title="She sat in the living room and smoked a cigarette">
 <pre>
 [img[pictures/shesatinthelivingroom.jpg]]
 
