--- a/index.html
+++ b/index.html
@@ -13039,13 +13039,13 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20220903102152357" modified="20220903103459755" tags="אימהות בתים [[האחיות בלות]] [[סיפורים אמיתיים]]" title="היא ישבה בסלון ועישנה סיגריה">
+<div created="20220903102152357" modified="20220903104420244" tags="אימהות בתים [[האחיות בלות]] [[סיפורים אמיתיים]]" title="היא ישבה בסלון ועישנה סיגריה">
 <pre>
 [img[pictures/shesatinthelivingroom.jpg]]
 
-[[אימא של ג'אז]:
+[[אימא של ג'אז]]:
 
-בסוף התיכון הגיע מורה לדרמה, ואחותי ואני הצטרפנו לחוג שפתח. באחד התרגילים נתבקשנו ללכת בחדר, ולהגיד משפט שמזכיר לנו את אימא שלנו. אני לא זוכרת מה היה המשפט שאני אמרתי. אבל אני זוכרת את המשפט שאחותי אמרר: &quot;היא ישבה בסלון ועישנה סיגריה&quot;.
+בסוף התיכון הגיע למושבה מורה לדרמה, ואחותי ואני הצטרפנו לחוג שפתח. באחד התרגילים נתבקשנו ללכת בחדר, ולהגיד משפט שמזכיר לנו את אימא שלנו. אני לא זוכרת מה היה המשפט שאני אמרתי. אבל אני זוכרת את המשפט שאחותי אמרה: &quot;היא ישבה בסלון ועישנה סיגריה&quot;.
 
 
 
