--- a/english.html
+++ b/english.html
@@ -561,6 +561,8 @@ Error message and password prompt
 
 <li>From Guy's eastern balcony</li>
 
+<li>From the balcony of Yali and Ron</li>
+
 <li>From the kitchen's window</li>
 
 <li>From the kitchen's window 2</li>
@@ -9272,7 +9274,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[She sat in the living room and smoked a cigarette]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[From the balcony of Yali and Ron]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11647,7 +11649,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20220903102843424" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20220907072702413" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11732,6 +11734,16 @@ The corona times have brought about a new routine to the tribal campfire, such a
 
 
  &lt;&lt;heblink [[מהמרפסת המזרחית של גיא]]&gt;&gt;
+</pre>
+</div>
+<div created="20220907072526120" modified="20220907072732350" tags="[[Here in the Ghetto]]" title="From the balcony of Yali and Ron">
+<pre>
+[img[pictures/fromthebalconyof.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[מהמרפסת של יהלי ורון]]&gt;&gt;
 </pre>
 </div>
 <div created="20200426192715369" modified="20200503153817481" tags="[[Here in the Ghetto]] Houses Kitchens Laundry Windows" title="From the kitchen's window">
