--- a/index.html
+++ b/index.html
@@ -1057,6 +1057,8 @@ Error message and password prompt
 
 <li>מהמרפסת המזרחית של גיא</li>
 
+<li>מהמרפסת של יהלי ורון</li>
+
 <li>מוזיקה</li>
 
 <li>מוזנח זה המטופח החדש</li>
@@ -9360,7 +9362,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[היא ישבה בסלון ועישנה סיגריה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מהמרפסת של יהלי ורון]] Imagine [[היא ישבה בסלון ועישנה סיגריה]] [[אימא של ג'אז]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9380,7 +9382,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20220829175509727" title="$:/temp/search">
+<div created="20161023184814872" modified="20220907072358914" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10859,7 +10861,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20220903102944202" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20220907072817293" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -16667,6 +16669,13 @@ We rise to play a greater part.
 
 
 &lt;&lt;englink [[From Guy's eastern balcony]]&gt;&gt;</pre>
+</div>
+<div created="20220907072402104" modified="20220907072842864" tags="[[כאן בגטו]]" title="מהמרפסת של יהלי ורון">
+<pre>[img[pictures/fromthebalconyof.jpg]]
+
+
+
+&lt;&lt;englink [[ From the balcony of Yali and Ron ]]&gt;&gt;</pre>
 </div>
 <div created="20180205175902513" modified="20200212204951293" tags="[[כמה שירים כבר אפשר להמציא בכלל]]" title="מוזיקה">
 <pre>[img[pictures/music.jpg]]
