--- a/english.html
+++ b/english.html
@@ -11736,9 +11736,8 @@ The corona times have brought about a new routine to the tribal campfire, such a
  &lt;&lt;heblink [[מהמרפסת המזרחית של גיא]]&gt;&gt;
 </pre>
 </div>
-<div created="20220907072526120" modified="20220907072732350" tags="[[Here in the Ghetto]]" title="From the balcony of Yali and Ron">
-<pre>
-[img[pictures/fromthebalconyof.jpg]]
+<div created="20220907072526120" modified="20220907074319475" tags="[[Here in the Ghetto]]" title="From the balcony of Yali and Ron">
+<pre>[img[pictures/fromthebalconyof.jpg]]
 
 
 
@@ -15186,8 +15185,7 @@ Shay Tra Litman is [[a fine young lad|https://www.youtube.com/watch?v=_awp-5mjew
  &lt;&lt;heblink [[שי טרא ליטמן]]&gt;&gt;</pre>
 </div>
 <div created="20220903102731013" modified="20220903104251789" tags="Mothers Houses [[True stories]] [[Menopause sisters]]" title="She sat in the living room and smoked a cigarette">
-<pre>
-[img[pictures/shesatinthelivingroom.jpg]]
+<pre>[img[pictures/shesatinthelivingroom.jpg]]
 
 
 
