from the balcony

--- a/english.html
+++ b/english.html
@@ -11649,7 +11649,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20220907072702413" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20220907163204878" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11736,8 +11736,9 @@ The corona times have brought about a new routine to the tribal campfire, such a
  &lt;&lt;heblink [[מהמרפסת המזרחית של גיא]]&gt;&gt;
 </pre>
 </div>
-<div created="20220907072526120" modified="20220907074319475" tags="[[Here in the Ghetto]]" title="From the balcony of Yali and Ron">
-<pre>[img[pictures/fromthebalconyof.jpg]]
+<div created="20220907163050969" modified="20220907163234980" tags="[[Here in the Ghetto]]" title="From the balcony of Yali and Ron">
+<pre>
+[img[pictures/fromthebalconyof.jpg]]
 
 
 
