from the balcony

--- a/english.html
+++ b/english.html
@@ -11649,7 +11649,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20220907163204878" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20220907164550584" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11736,15 +11736,14 @@ The corona times have brought about a new routine to the tribal campfire, such a
  &lt;&lt;heblink [[מהמרפסת המזרחית של גיא]]&gt;&gt;
 </pre>
 </div>
-<div created="20220907163050969" modified="20220907163234980" tags="[[Here in the Ghetto]]" title="From the balcony of Yali and Ron">
+<div created="20220907164439788" modified="20220907164614282" tags="[[Here in the Ghetto]]" title="From the balcony of Yali and Ron">
 <pre>
 [img[pictures/fromthebalconyof.jpg]]
 
 
 
 
- &lt;&lt;heblink [[מהמרפסת של יהלי ורון]]&gt;&gt;
-</pre>
+ &lt;&lt;heblink [[מהמרפסת של יהלי ורון]]&gt;&gt;</pre>
 </div>
 <div created="20200426192715369" modified="20200503153817481" tags="[[Here in the Ghetto]] Houses Kitchens Laundry Windows" title="From the kitchen's window">
 <pre>[img[pictures/kitchenswindow.jpg]]
