--- a/index.html
+++ b/index.html
@@ -9362,7 +9362,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מהמרפסת של יהלי ורון]] Imagine [[היא ישבה בסלון ועישנה סיגריה]] [[אימא של ג'אז]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מהמרפסת של יהלי ורון]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10861,7 +10861,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20220907072817293" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20220907165402763" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -13042,8 +13042,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 </pre>
 </div>
 <div created="20220903102152357" modified="20220903104420244" tags="אימהות בתים [[האחיות בלות]] [[סיפורים אמיתיים]]" title="היא ישבה בסלון ועישנה סיגריה">
-<pre>
-[img[pictures/shesatinthelivingroom.jpg]]
+<pre>[img[pictures/shesatinthelivingroom.jpg]]
 
 [[אימא של ג'אז]]:
 
@@ -16670,7 +16669,7 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[From Guy's eastern balcony]]&gt;&gt;</pre>
 </div>
-<div created="20220907072402104" modified="20220907072842864" tags="[[כאן בגטו]]" title="מהמרפסת של יהלי ורון">
+<div created="20220907072402104" modified="20220907165438061" tags="[[כאן בגטו]]" title="מהמרפסת של יהלי ורון">
 <pre>[img[pictures/fromthebalconyof.jpg]]
 
 
