from the balcony

--- a/index.html
+++ b/index.html
@@ -10861,7 +10861,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20220907165402763" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20220907170113258" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -16669,12 +16669,17 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[From Guy's eastern balcony]]&gt;&gt;</pre>
 </div>
-<div created="20220907072402104" modified="20220907165438061" tags="[[כאן בגטו]]" title="מהמרפסת של יהלי ורון">
-<pre>[img[pictures/fromthebalconyof.jpg]]
+<div created="20220907170023654" modified="20220907170152504" tags="[[כאן בגטו]]" title="מהמרפסת של יהלי ורון">
+<pre>
+
+[img[pictures/fromthebalconyof.jpg]]
 
 
 
-&lt;&lt;englink [[ From the balcony of Yali and Ron ]]&gt;&gt;</pre>
+
+
+
+&lt;&lt;englink [[From the balcony of Yali and Ron]]&gt;&gt;</pre>
 </div>
 <div created="20180205175902513" modified="20200212204951293" tags="[[כמה שירים כבר אפשר להמציא בכלל]]" title="מוזיקה">
 <pre>[img[pictures/music.jpg]]
