--- a/index.html
+++ b/index.html
@@ -16669,10 +16669,11 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[From Guy's eastern balcony]]&gt;&gt;</pre>
 </div>
-<div created="20220907170023654" modified="20220907170152504" tags="[[כאן בגטו]]" title="מהמרפסת של יהלי ורון">
+<div created="20220907170023654" modified="20220907180112244" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] בתים כביסה [[מטא בדיון]]" title="מהמרפסת של יהלי ורון">
 <pre>
 
 [img[pictures/fromthebalconyof.jpg]]
+
 
 
 
