--- a/english.html
+++ b/english.html
@@ -1313,6 +1313,8 @@ Error message and password prompt
 
 <li>What truly happensd at Christmas dinner</li>
 
+<li>When I hang out the launry</li>
+
 <li>When people were still optimistic</li>
 
 <li>When the cars were pretty</li>
@@ -9274,7 +9276,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[From the balcony of Yali and Ron]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[When I hang out the launry]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11649,7 +11651,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20220907164550584" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20220910123345591" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -17057,6 +17059,15 @@ I go out of a lesson at [[Dalia's|Dalya`s room]], go up towards Heichal Hatarbut
 
  &lt;&lt;heblink [[מה שבאמת קרה בארוחת כריסמס]]&gt;&gt;
 </pre>
+</div>
+<div created="20220910123224774" modified="20220910123408961" tags="[[Here in the Ghetto]] Laundry Houses" title="When I hang out the launry">
+<pre>
+
+[img[pictures/whenihangoutthelaunry.jpg]]
+
+
+
+ &lt;&lt;heblink [[כשאני תולה כביסה]]&gt;&gt;</pre>
 </div>
 <div created="20200215164420935" modified="20200215165518955" tags="Once" title="When people were still optimistic">
 <pre>''They used to wave hi to each other''
