--- a/index.html
+++ b/index.html
@@ -917,6 +917,8 @@ Error message and password prompt
 
 <li>כשאמרו קסטה</li>
 
+<li>כשאני תולה כביסה</li>
+
 <li>כשאנשים עוד היו אופטימים</li>
 
 <li>כשהיו בתי קולנוע</li>
@@ -9362,7 +9364,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מהמרפסת של יהלי ורון]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כשאני תולה כביסה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10861,7 +10863,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20220907170113258" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20220910123436654" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -15527,6 +15529,18 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[When they said cassette]]&gt;&gt;
 </pre>
 </div>
+<div created="20220910123033059" modified="20220910123858951" tags="[[כאן בגטו]] כביסה בתים" title="כשאני תולה כביסה">
+<pre>
+[img[pictures/whenihangoutthelaunry.jpg]]
+
+!!![[תומר]]:
+
+כשאני תולה כביסה העיניים שלי מטיילות מעצמן.
+
+
+&lt;&lt;englink [[When I hang out the launry]]&gt;&gt;
+</pre>
+</div>
 <div created="20170512181006792" modified="20200215165425661" tags="פעם" title="כשאנשים עוד היו אופטימים">
 <pre>''הם היו מנופפים זה לזה לשלום''
 
@@ -16669,12 +16683,10 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[From Guy's eastern balcony]]&gt;&gt;</pre>
 </div>
-<div created="20220907170023654" modified="20220907180112244" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] בתים כביסה [[מטא בדיון]]" title="מהמרפסת של יהלי ורון">
+<div created="20220907170023654" modified="20220910124128004" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] בתים כביסה [[מטא בדיון]]" title="מהמרפסת של יהלי ורון">
 <pre>
 
 [img[pictures/fromthebalconyof.jpg]]
-
-
 
 
 
