--- a/english.html
+++ b/english.html
@@ -317,6 +317,8 @@ Error message and password prompt
 
 <li>Assuming and Preserving</li>
 
+<li>At the bakery for instance</li>
+
 <li>Aunt Jemima</li>
 
 <li>Autarky</li>
@@ -9276,7 +9278,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[When I hang out the launry]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[At the bakery for instance]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9906,6 +9908,14 @@ I didn't dare to hear [[HATKAFAT LEV|https://www.youtube.com/watch?v=YS1C6lJImOc
 '': In the animal farm'', the animals display faith.
 
  &lt;&lt;heblink [[מניחים ושומרים]]&gt;&gt;</pre>
+</div>
+<div created="20220919073158594" modified="20220919073340703" tags="Baking Kitchens" title="At the bakery for instance">
+<pre>
+[img[pictures/atthebakery.jpg]]
+
+
+
+ &lt;&lt;heblink [[למשל במאפייה]]&gt;&gt;</pre>
 </div>
 <div created="20200226100452363" modified="20200625141051291" tags="HH Music [[Hunky Dory]]" title="Aunt Jemima">
 <pre>[img[pictures/aunt-jemima.jpg]]
@@ -11739,8 +11749,7 @@ The corona times have brought about a new routine to the tribal campfire, such a
 </pre>
 </div>
 <div created="20220907164439788" modified="20220907175710457" tags="[[Here in the Ghetto]] Houses Laundry [[True stories]] Metafiction" title="From the balcony of Yali and Ron">
-<pre>
-[img[pictures/fromthebalconyof.jpg]]
+<pre>[img[pictures/fromthebalconyof.jpg]]
 
 
 
@@ -17062,7 +17071,6 @@ I go out of a lesson at [[Dalia's|Dalya`s room]], go up towards Heichal Hatarbut
 </div>
 <div created="20220910123224774" modified="20220910123408961" tags="[[Here in the Ghetto]] Laundry Houses" title="When I hang out the launry">
 <pre>
-
 [img[pictures/whenihangoutthelaunry.jpg]]
 
 
