--- a/index.html
+++ b/index.html
@@ -1013,6 +1013,8 @@ Error message and password prompt
 
 <li>למטה</li>
 
+<li>למשל במאפייה</li>
+
 <li>לפתן חבושים</li>
 
 <li>לצייר</li>
@@ -9364,7 +9366,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כשאני תולה כביסה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[למשל במאפייה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10863,7 +10865,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20220910123436654" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20220919073403633" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -15530,8 +15532,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 </pre>
 </div>
 <div created="20220910123033059" modified="20220910123858951" tags="[[כאן בגטו]] כביסה בתים" title="כשאני תולה כביסה">
-<pre>
-[img[pictures/whenihangoutthelaunry.jpg]]
+<pre>[img[pictures/whenihangoutthelaunry.jpg]]
 
 !!![[תומר]]:
 
@@ -16262,6 +16263,14 @@ We rise to play a greater part.
 &lt;&lt;englink [[Down there]]&gt;&gt;
 </pre>
 </div>
+<div created="20220919072930887" modified="20220919073430109" tags="אפייה מטבחים" title="למשל במאפייה">
+<pre>[img[pictures/atthebakery.jpg]]
+
+
+
+
+&lt;&lt;englink [[At the bakery for instance]]&gt;&gt;</pre>
+</div>
 <div created="20170211163114823" modified="20170212133520340" title="לפתן חבושים">
 <pre>[img[pictures/KLL6V2vFdC26B5R4.jpg]]
 
@@ -16684,9 +16693,7 @@ We rise to play a greater part.
 &lt;&lt;englink [[From Guy's eastern balcony]]&gt;&gt;</pre>
 </div>
 <div created="20220907170023654" modified="20220910124128004" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] בתים כביסה [[מטא בדיון]]" title="מהמרפסת של יהלי ורון">
-<pre>
-
-[img[pictures/fromthebalconyof.jpg]]
+<pre>[img[pictures/fromthebalconyof.jpg]]
 
 
 
