--- a/index.html
+++ b/index.html
@@ -9357,7 +9357,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20210430202203122" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20220903103503595" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20220919190952821" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9366,7 +9366,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[למשל במאפייה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[למשל במאפייה]] [[איתן וג'ואל כהן]] המעבדה אווה סדרות [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9386,7 +9386,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20220907072358914" title="$:/temp/search">
+<div created="20161023184814872" modified="20220919190109431" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10865,7 +10865,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20220919073403633" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20220919185544656" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -16263,8 +16263,23 @@ We rise to play a greater part.
 &lt;&lt;englink [[Down there]]&gt;&gt;
 </pre>
 </div>
-<div created="20220919072930887" modified="20220919073430109" tags="אפייה מטבחים" title="למשל במאפייה">
+<div created="20220919072930887" modified="20220919191419121" tags="אפייה מטבחים סדרות [[סיפורים אמיתיים]] [[סיפורים מהעתיד]]" title="למשל במאפייה">
 <pre>[img[pictures/atthebakery.jpg]]
+
+[[אימא של ג'אז]]:
+
+המאפייה הייתה, למשל, יכולה להיות אין סוף סיפורים לכמה עונות של [[סידרת|סדרות]] דרמה הכי כייפית ונוגעת ללב כאחד. היא אפילו יכלה להיות סידרה מעולה אם הייתה נכתבת ומבויימת ומצולמת וערוכה היטב והיה לה גם פס קול נהדר וצוות שחקנים נפלא.
+
+[[אחרי ש|המעבדה]]כבר לא הייתה לי יותר מאפייה, כתבתי טקסט ארוך למדי שקראתי לו &quot;למשל במאפייה&quot;, זה היה ב-2002, בתקופה בה גם החלטתי שאני [[אווה כהן||אווה]], קונדיטורית הונגריה ואחותם של [[איתן וג'ואל כהן]], (ממש כמו [[יויו]]). 
+הטקסט היה למעשה סוג של התחלת מחשבותיי על טקסט [[וויקי|https://en.wikipedia.org/wiki/Wiki]] והיו מסומנים בו שמות של מקומות, אנשים, מתכונים ועוד, במטרה שייפתחו עוד ועוד עולמות, כמו [[שכאן|האחיות כהן]].
+
+רציתי לספר על כל עובדת,על השולחנות, על הקשרים והתופעות. הטקסט הזה הלך לאיבוד עם הארד דיסק שנדפק לפני כמה שנים, אני לא מתכוונת בשלב הזה לנסות ולשחזר אותו, אך אני כן מצהירה בזאת, ספטמבר 2022 סוף ה'תשפ&quot;ב, שאני רוצה להתחיל ולהיזכר במאפייה הקסומה שהייתה לי ושתמיד היא זיכרון מתוק.
+
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[למשל במאפייה]]&quot;&gt;&gt;
+
 
 
 
@@ -17831,12 +17846,12 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[New order]]&gt;&gt;</pre>
 </div>
-<div created="20170711173812724" modified="20200405110254891" tags="טלוויזיה סגירים [[הלכות קורונה]]" title="סדרות">
+<div created="20170711173812724" modified="20220919190759245" tags="טלוויזיה סגירים [[הלכות קורונה]]" title="סדרות">
 <pre>[img[pictures/sdarot.jpg]]
 
 !!![[יויו]]:
 
-לאחר חיפושים, מגיע רגע בו [[לאונרד|https://www.imdb.com/name/nm0001295/?ref_=ttfc_fc_cl_t28]], השמאן האינדיאני האזורי ב//חשיפה לצפון//, מבין ש&quot;הסיפור המרפא&quot; של האדם הלבן הוא הקולנוע. על פי ההגיון הזה, סדרות זה בריא, וצפיית בינג' זה [[חבלז שוכו קר]], שלא לדבר על זה שאחרי 12 עונות של [[האנטומיה של גריי]] אני כשיר להיות רופא מנתח.
+לאחר חיפושים, מגיע רגע בו [[לאונרד|https://www.imdb.com/name/nm0001295/?ref_=ttfc_fc_cl_t28]], השמאן האמריקני ילידי האזורי ב//חשיפה לצפון//, מבין ש&quot;הסיפור המרפא&quot; של האדם הלבן הוא הקולנוע. על פי ההגיון הזה, סדרות זה בריא, וצפיית בינג' זה [[חבלז שוכו קר]], שלא לדבר על זה שאחרי 12 עונות של [[האנטומיה של גריי]] אני כשיר להיות רופא מנתח.
 
 
 &lt;&lt;list-links filter:&quot;[tag[סדרות]]&quot;&gt;&gt;
