--- a/english.html
+++ b/english.html
@@ -9278,7 +9278,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[At the bakery for instance]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="Films [[At the bakery for instance]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9909,11 +9909,12 @@ I didn't dare to hear [[HATKAFAT LEV|https://www.youtube.com/watch?v=YS1C6lJImOc
 
  &lt;&lt;heblink [[מניחים ושומרים]]&gt;&gt;</pre>
 </div>
-<div created="20220919073158594" modified="20220919073340703" tags="Baking Kitchens" title="At the bakery for instance">
+<div created="20220919073158594" modified="20220919185732824" tags="Baking Kitchens [[True stories]] [[Stories from the future]] [[TV Series]]" title="At the bakery for instance">
 <pre>
 [img[pictures/atthebakery.jpg]]
 
 
+&lt;&lt;list-links filter:&quot;[tag[At the bakery for instance]]&quot;&gt;&gt;
 
  &lt;&lt;heblink [[למשל במאפייה]]&gt;&gt;</pre>
 </div>
@@ -11661,7 +11662,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20220910123345591" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20220919185654276" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
