--- a/english.html
+++ b/english.html
@@ -9278,7 +9278,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Films [[At the bakery for instance]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9910,8 +9910,7 @@ I didn't dare to hear [[HATKAFAT LEV|https://www.youtube.com/watch?v=YS1C6lJImOc
  &lt;&lt;heblink [[מניחים ושומרים]]&gt;&gt;</pre>
 </div>
 <div created="20220919073158594" modified="20220919185732824" tags="Baking Kitchens [[True stories]] [[Stories from the future]] [[TV Series]]" title="At the bakery for instance">
-<pre>
-[img[pictures/atthebakery.jpg]]
+<pre>[img[pictures/atthebakery.jpg]]
 
 
 &lt;&lt;list-links filter:&quot;[tag[At the bakery for instance]]&quot;&gt;&gt;
@@ -17071,8 +17070,7 @@ I go out of a lesson at [[Dalia's|Dalya`s room]], go up towards Heichal Hatarbut
 </pre>
 </div>
 <div created="20220910123224774" modified="20220910123408961" tags="[[Here in the Ghetto]] Laundry Houses" title="When I hang out the launry">
-<pre>
-[img[pictures/whenihangoutthelaunry.jpg]]
+<pre>[img[pictures/whenihangoutthelaunry.jpg]]
 
 
 
