--- a/index.html
+++ b/index.html
@@ -9366,7 +9366,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[למשל במאפייה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -16263,7 +16263,7 @@ We rise to play a greater part.
 &lt;&lt;englink [[Down there]]&gt;&gt;
 </pre>
 </div>
-<div created="20220919072930887" modified="20220920201205662" tags="אפייה מטבחים סדרות [[סיפורים אמיתיים]] [[סיפורים מהעתיד]]" title="למשל במאפייה">
+<div created="20220919072930887" modified="20220920202544496" tags="אפייה מטבחים סדרות [[סיפורים אמיתיים]] [[סיפורים מהעתיד]]" title="למשל במאפייה">
 <pre>[img[pictures/atthebakery.jpg]]
 
 [[אימא של ג'אז]]:
