--- a/index.html
+++ b/index.html
@@ -1113,6 +1113,8 @@ Error message and password prompt
 
 <li>ממשיכים לדמם</li>
 
+<li>מנוחה</li>
+
 <li>מניחים ושומרים</li>
 
 <li>מנקים היטב</li>
@@ -9366,7 +9368,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[למשל במאפייה]] מנוחה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10865,7 +10867,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20220919185544656" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20220921062343192" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -16263,7 +16265,7 @@ We rise to play a greater part.
 &lt;&lt;englink [[Down there]]&gt;&gt;
 </pre>
 </div>
-<div created="20220919072930887" modified="20220920204907534" tags="אפייה מטבחים סדרות [[סיפורים אמיתיים]] [[סיפורים מהעתיד]]" title="למשל במאפייה">
+<div created="20220919072930887" modified="20220921062638724" tags="אפייה מטבחים סדרות [[סיפורים אמיתיים]] [[סיפורים מהעתיד]]" title="למשל במאפייה">
 <pre>[img[pictures/atthebakery.jpg]]
 
 [[אימא של ג'אז]]:
@@ -17103,6 +17105,14 @@ We rise to play a greater part.
 &lt;&lt;englink [[Keep on bleeding]]&gt;&gt;
 
 </pre>
+</div>
+<div created="20220921062051005" modified="20220921062623048" tags="מטבחים בתים" title="מנוחה">
+<pre>[img[pictures/rest.jpg]]
+
+
+
+
+&lt;&lt;englink [[Rest]]&gt;&gt;</pre>
 </div>
 <div created="20170709165358073" modified="20200215095849330" tags="[[בחוות החיות]]" title="מניחים ושומרים">
 <pre>[img[pictures/nekiyey-capaim.jpg]]
