--- a/index.html
+++ b/index.html
@@ -9370,7 +9370,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[החנות שלנו]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כשאני תולה כביסה]] [[החנות שלנו]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -13049,7 +13049,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20220929061138622" modified="20220929061514654" tags="[[כאן בגטו]] [[האחיות בלות]]" title="החנות שלנו">
+<div created="20220929061138622" modified="20220929062012449" tags="[[כאן בגטו]]" title="החנות שלנו">
 <pre>
 [img[pictures/ourshop.jpg]]
 
@@ -15544,7 +15544,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[When they said cassette]]&gt;&gt;
 </pre>
 </div>
-<div created="20220910123033059" modified="20220910123858951" tags="[[כאן בגטו]] כביסה בתים" title="כשאני תולה כביסה">
+<div created="20220910123033059" modified="20220929062039812" tags="[[כאן בגטו]] כביסה בתים חלונות" title="כשאני תולה כביסה">
 <pre>[img[pictures/whenihangoutthelaunry.jpg]]
 
 !!![[תומר]]:
