--- a/english.html
+++ b/english.html
@@ -1319,7 +1319,7 @@ Error message and password prompt
 
 <li>What truly happensd at Christmas dinner</li>
 
-<li>When I hang out the launry</li>
+<li>When I hang out the laundry</li>
 
 <li>When people were still optimistic</li>
 
@@ -9282,7 +9282,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[When I hang out the launry]] [[Our shop]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[When I hang out the laundry]] [[Our shop]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -17090,7 +17090,7 @@ I go out of a lesson at [[Dalia's|Dalya`s room]], go up towards Heichal Hatarbut
  &lt;&lt;heblink [[מה שבאמת קרה בארוחת כריסמס]]&gt;&gt;
 </pre>
 </div>
-<div created="20220910123224774" modified="20220929062114226" tags="[[Here in the Ghetto]] Laundry Houses Windows" title="When I hang out the launry">
+<div created="20220910123224774" modified="20220929162106930" tags="[[Here in the Ghetto]] Laundry Houses Windows" title="When I hang out the laundry">
 <pre>[img[pictures/whenihangoutthelaunry.jpg]]
 
 
