--- a/index.html
+++ b/index.html
@@ -9370,7 +9370,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כשאני תולה כביסה]] [[החנות שלנו]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כשאני תולה כביסה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -15544,7 +15544,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[When they said cassette]]&gt;&gt;
 </pre>
 </div>
-<div created="20220910123033059" modified="20220929062039812" tags="[[כאן בגטו]] כביסה בתים חלונות" title="כשאני תולה כביסה">
+<div created="20220910123033059" modified="20220929162154575" tags="[[כאן בגטו]] כביסה בתים חלונות" title="כשאני תולה כביסה">
 <pre>[img[pictures/whenihangoutthelaunry.jpg]]
 
 !!![[תומר]]:
@@ -15552,7 +15552,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 כשאני תולה כביסה העיניים שלי מטיילות מעצמן.
 
 
-&lt;&lt;englink [[When I hang out the launry]]&gt;&gt;
+&lt;&lt;englink [[When I hang out the laundry]]&gt;&gt;
 </pre>
 </div>
 <div created="20170512181006792" modified="20200215165425661" tags="פעם" title="כשאנשים עוד היו אופטימים">
